adjusting footer position to avoid text cutoff

--- a/Trackfully-Client/src/app/footer/footer.component.css
+++ b/Trackfully-Client/src/app/footer/footer.component.css
@@ -4,6 +4,9 @@
 }
 
 footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     background-color: #519188;
     display: flex;
     flex-direction: column;
